--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "",
   "main": "bin/lib/ArgumentManager.js",
+  "types": "bin/lib/ArgumentManager.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
