--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Clint Pamperin",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cpamp21/node-cli-args"
+  },
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^7.0.5",
     "typescript": "^2.1.6"
