--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^7.0.5",
-    "typescript": "^2.1.6"
+    "@types/node": "^7.0.5"
   }
 }
